# ppi

./: .gitignore  README.md  ppi.yml  pyproject.toml
colabfold/: colabfold.sh  colabfold_README.md  colabfold_eval.ipynb  colabfold_prep.ipynb  colabfold_scores.tsv  foldseek_3Di_sh.patch  huintaf.ipynb  huintaf_fix.ipynb  huintaf_seth.sh  negatome_scores.tsv  pdockq_colabfold.patch  prona_prep.ipynb  scores.tsv  seth_all.patch
colabfold/negatome/: manual_stringent.fasta  manual_stringent.hash.fasta  manual_stringent.json  manual_stringent.tab  manual_stringent.tsv  negatome_100_colabfold.fasta
colabfold/ppit5/: ppit5.ipynb  ppit5.sh
data/embedding/: __init__.py  embed.py  run_embed.py  t5_embedd.py
data/ppi_dataset/: 6082.ipynb  data_prep.ipynb
data/ppi_dataset/template/: 7080.ipynb  Snakefile  data_prep.ipynb  homodimer_set.ipynb  inter_species_set.ipynb
data/preprocessing/embedding/: run_embed.py
data/proteomes/: proteome_prep.ipynb
data/utils/: api.py  cfg.py  extract.py  general.py  pairs.py  plot.py  proteome.py  reduce.py
embed/: embed.py  t5_embedd.py
eval/: eval_model.py
ppi/: colabfold_prep.ipynb  config.py  eval.py  eval_fft4.ipynb  fft.ipynb  fft2d.ipynb  main.py  metrics.py  test.fasta  test.tsv  train.fasta  train.tsv  train100.fasta  train100.tsv
ppi/embed/: run_embed.py  t5_embedd.py
ppi/train/: interaction.py  train_perprot.py  train_t5.py  train_t5_cval.py
ppi/utils/: dataloader.py  embed.py  general_utils.py
ppi_data/Bernett2023/: Intra0_neg_rr.txt  Intra0_pos_rr.txt  Intra1_neg_rr.txt  Intra1_pos_rr.txt
ppi_data/proteomes/: proteome_prep.ipynb
ppi_data/template/: 8000_10:1_full.ipynb  8001_10:1_small.ipynb  8002_1:1_full.ipynb  8003_1:1_small.ipynb  8004_1:1_full_random.ipynb  8005_1:1_small_random.ipynb  Snakefile  data_prep.ipynb  homodimer_set.ipynb  inter_species_set.ipynb  thesis_8000_10:1_full.ipynb
ppi_utils/: api.py  cfg.py  deprec.py  eval.py  extract.py  general.py  pairs.py  plot.py  proteome.py  reduce.py
train/: interaction.py  train_perprot.py  train_t5.py  train_t5_cval.py
training/: interaction.py  train_perprot.py  train_t5.py  train_t5_cval.py
training/perprot/: network.py  train_perprot.py  train_perprot_cval.py
training/perresidue/: train_t5.py  train_t5_cval.py
training/perresidue/models/: interaction.py  interaction_dscript.py
utils/: __init__.py  dataloader.py  dataloader_cval.py  evaluation_utils.py  general_utils.py  migrate_to_crc32c_and_json.py  pkl_to_json.py  sequence_utils.py
