[build-system]
requires = [
    'setuptools>=42',
    'wheel'
]
build-backend = 'setuptools.build_meta'

[tool.setuptools]
packages = ['ppi', 'train', 'utils', 'ppi_utils']

# [build-system]
# requires = ['poetry-core>=1.0.0']
# build-backend = 'poetry.core.masonry.api'

[project]  # tool.poetry
name = 'ppi'
version = '0.3.0'
description = ''
license = {text = 'Apache-2.0'}

[tool.poetry]
authors = ['Leo Kaindl <leo.kaindl@tum.de>', 'Duc Anh Le <ducanh.le@tum.de>']
license = 'Apache-2.0'

[tool.poetry.dependencies]
python = '^3.9.7'
pytorch = '^1.0.2'
torch = '^1.11.0'
biopython = '^1.79'

# [tool.poetry.dev-dependencies]

[project.scripts]  # project.scripts  tool.poetry.scripts
ppi = 'ppi.main:app'
embed = 'embed.run_embed:main'
train = 'train.train_t5_cval:main'
perprot = 'train.train_perprot:main'
ppi_eval = 'eval.eval_model:main'

