[build-system]
requires = [
    'setuptools>=42',
    'wheel'
]
build-backend = 'setuptools.build_meta'

[tool.setuptools]
packages = ['ppi']

# [build-system]
# requires = ['poetry-core>=1.0.0']
# build-backend = 'poetry.core.masonry.api'

[project]  # tool.poetry
name = 'ppi'
version = '0.4.2'
description = ''
license = { text = 'Apache-2.0' }

[tool.poetry]
name = 'ppi'
version = '0.4.2'
description = ''
authors = ['Leo Kaindl <leo.kaindl@tum.de>', 'Duc Anh Le <ducanh.le@tum.de>']
license = 'Apache-2.0'

[tool.poetry.dependencies]
python = '^3.9.7'
#pytorch = '^1.0.2'
#torch = '^1.11.0'
biopython = '^1.79'
typer = "^0.7.0"
rich = "^13.3.2"
ppi_utils = { git = "https://github.com/Rostlab/ppi_utils.git", develop = true }
#ppi-utils = { path = '/home/quirin/PYTHON/ppi_utils', develop = true }

# [tool.poetry.dev-dependencies]

[project.scripts]
ppi = 'ppi.main:app'

[tool.poetry.scripts]
ppi = 'ppi.main:app'

